--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 <nav class="navbar navbar-expand-lg">
   <a class="navbar-brand" href="#"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
+    <i class="fas fa-ellipsis-v fa-1.6x text-white"></i>
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav ml-auto">
+    <ul class="navbar-nav ml-auto mr-3">
       <li class="nav-item active">
         <a class="nav-link" href="#">Home</a>
       </li>
@@ -44,29 +44,20 @@
 
 <!----------------------- Header Begins Here --------------->
 
-<section class="section1">
-  <div class="header">
-    <!-- <div class="header-center-part">
-      <div class="t1">Hi, I am</div>
-      <div class="name t2">Sattam</div>
-      <div class="name t3">BAndyopadhyay</div>
-    </div>
-    <div class="header-desc">
-      <h3>Jadavpur University (2019-2023)</h3>
-    </div> -->
+<section class="header">
     <div class="header-center-part">
-      <h4 class="pb-3">Hi, I am</h4>
-      <p class="display-3">Sattam</p>
-      <p class="display-3 pb-3 bottom-border">Bandyopadhyay</p>
-      <h3 class="pt-2">Jadavpur University (2019-2023)</h3>
-      <p class="h5"> Department of Information Technology</p>
+      <p class="pb-2">Hi, I am</p>
+      <p class="font1">Sattam</p>
+      <p class=" pb-3 font1 bottom-border">Bandyopadhyay</p>
+      <p class="pt-2 h5">Jadavpur University (2019-2023)</p>
+      <p class=""> Department of Information Technology</p>
     </div>
-  </div>
 </section>
 
 <div class="hr"></div>
 
 
+      <script src="https://kit.fontawesome.com/e7fd050cda.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
