--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Comfortaa&family=Poppins&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Megrim&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
@@ -46,10 +46,10 @@
 
 <section class="header">
     <div class="header-center-part">
-      <p class="pb-2">Hi, I am</p>
-      <p class="font1">Sattam</p>
-      <p class=" pb-3 font1 bottom-border">Bandyopadhyay</p>
-      <p class="pt-2 h5">Jadavpur University (2019-2023)</p>
+      <p class="">Hi, I am</p>
+      <p class="name">Sattam</p>
+      <p class=" pb-3 bottom-border name">Bandyopadhyay</p>
+      <p class="pt-2 h5">Jadavpur University (2019-23)</p>
       <p class=""> Department of Information Technology</p>
     </div>
 </section>
