--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   </head>
   <body>
 <div class="hr"></div>
+
+ <!-------------------Navigation bar begins here----------->
+
 <nav class="navbar navbar-expand-lg">
   <a class="navbar-brand" href="#"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -42,7 +45,9 @@
   </div>
 </nav>
 
-<!----------------------- Header Begins Here --------------->
+<!-------------------Navbar ends here ----------------->
+
+<!----------------- Header (Home) Begins Here --------------->
 
 <section class="header">
     <div class="header-center-part">
@@ -53,11 +58,28 @@
       <p class=""> Department of Information Technology</p>
     </div>
 </section>
+<div class="hr"></div>
+
+<!----------------Header ends here------------->
+
+
+<!----------------About me section begins here---------->
+
+<section class="about-me">
+    <div class="d-flex flex-wrap flex-row justify-content-around align-items-center w-75 mx-auto">
+      <div class="about-me-image my-5"></div>
+      <div class="about-me-desc d-flex flex-column mr-5 mb-5">
+        <div class="text-center text-white h1 mb-5 heading pb-2">About Me</div>
+        <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </div>
+    </div>
+</section>
 
 <div class="hr"></div>
 
 
-      <script src="https://kit.fontawesome.com/e7fd050cda.js" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
+    <script src="https://kit.fontawesome.com/e7fd050cda.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
