--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav ml-auto mr-3">
+    <ul class="navbar-nav ml-auto mr-4">
       <li class="nav-item active">
         <a class="nav-link" href="#">Home</a>
       </li>
@@ -83,7 +83,7 @@
     <div class="d-flex flex-wrap flex-row justify-content-around align-items-center w-75 mx-auto">
       <div class="about-me-image my-5"></div>
       <div class="about-me-desc d-flex flex-column mb-5">
-        <div class="text-center text-white h1 mb-5 heading pb-2">About Me</div>
+        <div class="text-center text-white h1 mb-5 heading-border pb-2">About Me</div>
         <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </div>
     </div>
@@ -95,16 +95,23 @@
 
 <!----------------Education section begins here----------->
 
-<section class="education">
-  <div class="education-content d-flex ">
-    <div class="education-box">
-
+<section class="education d-flex">
+  <span class="edu-heading text-white h1 px-2 py-2">Education</span>
+  <div class="education-content d-flex">
+    <div class="education-box align-self-end">
+      <span class="edu-inside-box">
+        <p>Madhyamik :</p> <p>93.2%</p> <p>WBBSE</p>
+      </span>
     </div>
-    <div class="education-box">
-
+    <div class="education-box align-self-center">
+      <span class="edu-inside-box">
+        <p>HS : 92.3%</p> <p>WBCHSE</p> <p>WBJEE rank: 275</p> <p>JEEADV rank: 9600</p>
+      </span>
     </div>
-    <div class="education-box">
-
+    <div class="education-box align-self-start">
+      <span class="edu-inside-box">
+        <h4>Jadavpur</h4> <h4>University</h4> <p>CGPA: </p> 
+      </span>
     </div>
   </div>
 </section>
