--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Megrim&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/e7fd050cda.js" crossorigin="anonymous"></script>
   </head>
   <body onload="loadingEnabler()">
 
@@ -82,10 +83,15 @@
 <section class="about-me">
     <div class="d-flex flex-wrap flex-row justify-content-around align-items-center w-75 mx-auto">
       <div class="about-me-image my-5"></div>
-      <div class="about-me-desc d-flex flex-column mb-5">
+      <div class="about-me-desc d-flex flex-column mb-2">
         <div class="text-center text-white h1 mb-5 heading-border pb-2">About Me</div>
         <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      </div>
+        <div class="about-me-icons d-flex justify-content-center mt-3">
+          <a href="https://www.facebook.com/sattam.banerjee"><i class="fab fa-facebook fa-2x text-white px-3"> </i></a> 
+          <a href="https://www.instagram.com/__bsattam__/"><i class="fab fa-instagram fa-2x text-white px-3"> </i></a>
+          <a href="https://www.linkedin.com/in/sattam-bandyopadhyay-8b5b23190/"> <i class="fab fa-linkedin fa-2x text-white px-3"></i> </a>
+        </div>
+      '</div>
     </div>
 </section>
 <div class="hr"></div>
@@ -110,7 +116,7 @@
     </div>
     <div class="education-box align-self-start">
       <span class="edu-inside-box">
-        <h4>Jadavpur</h4> <h4>University</h4> <p>CGPA: </p> 
+        <h4>Jadavpur</h4> <h4>University</h4> <p>CGPA: </p>
       </span>
     </div>
   </div>
