--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Megrim&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/e7fd050cda.js" crossorigin="anonymous"></script>
+
   </head>
   <body onload="loadingEnabler()">
 
@@ -87,11 +88,11 @@
         <div class="text-center text-white h1 mb-5 heading-border pb-2">About Me</div>
         <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         <div class="about-me-icons d-flex justify-content-center mt-3">
-          <a href="https://www.facebook.com/sattam.banerjee"><i class="fab fa-facebook fa-2x text-white px-3"> </i></a> 
+          <a href="https://www.facebook.com/sattam.banerjee"><i class="fab fa-facebook fa-2x text-white px-3"> </i></a>
           <a href="https://www.instagram.com/__bsattam__/"><i class="fab fa-instagram fa-2x text-white px-3"> </i></a>
           <a href="https://www.linkedin.com/in/sattam-bandyopadhyay-8b5b23190/"> <i class="fab fa-linkedin fa-2x text-white px-3"></i> </a>
         </div>
-      '</div>
+      </div>
     </div>
 </section>
 <div class="hr"></div>
@@ -102,7 +103,7 @@
 <!----------------Education section begins here----------->
 
 <section class="education d-flex">
-  <span class="edu-heading text-white h1 px-2 py-2">Education</span>
+  <span class="edu-heading heading-border text-white h1 px-2 py-2">Education</span>
   <div class="education-content d-flex">
     <div class="education-box align-self-end">
       <span class="edu-inside-box">
@@ -123,10 +124,80 @@
 </section>
 <div class="hr"></div>
 
+<!----------------Education Section Ends Here------------->
+
+<!----------------Skills Section Begins here-------------->
+
+<section id="particles-js">
+  <div class="skills-main d-flex flex-column align-items-center">
+    <div class="bgb px-3 heading-border skill-heading h1
+     text-white text-center pt-4 pb-2 mx-auto">S K I L L S</div>
+    <div class="skills-all d-flex flex-row justify-content-around">
+      <div class="skills-box">
+        <div class="skill">
+          <span class="h4 font-weight-bold text-white">C</span>
+          <div class="skill-range mt-1">
+            <div class="skill-len s1"></div>
+          </div>
+        </div>
+        <div class="skill">
+          <span class="h4 font-weight-bold text-white">C++</span>
+          <div class="skill-range mt-1">
+            <div class="skill-len s2"></div>
+          </div>
+        </div>
+        <div class="skill">
+          <span class="h4 font-weight-bold text-white">
+          javascript</span>
+          <div class="skill-range mt-1">
+            <div class="skill-len s3"></div>
+          </div>
+        </div>
+        <div class="skill">
+          <span class="h4 font-weight-bold text-white">Python</span>
+          <div class="skill-range mt-1">
+            <div class="skill-len s4"></div>
+          </div>
+        </div>
+      </div>
+      <div class="skills-box">
+        <div class="skill">
+          <span class="h4 font-weight-bold text-white">
+          HTML</span>
+          <div class="skill-range mt-1">
+            <div class="skill-len s5"></div>
+          </div>
+        </div>
+        <div class="skill">
+          <span class="h4 font-weight-bold text-white">
+          CSS</span>
+          <div class="skill-range mt-1">
+            <div class="skill-len s6"></div>
+          </div>
+        </div>
+        <div class="skill">
+          <span class="h4 font-weight-bold text-white">
+          ReactJS</span>
+          <div class="skill-range mt-1">
+            <div class="skill-len s7"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<div class="hr"></div>
+
+
+
+
     <script src="script.js"></script>
     <script src="https://kit.fontawesome.com/e7fd050cda.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+    <script src="particles.js"></script>
+    <script src="app.js"></script>"
   </body>
 </html>
