--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto mr-4">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home</a>
+        <a class="nav-link" href="#home">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">About</a>
+        <a class="nav-link" href="#about">About</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Education</a>
+        <a class="nav-link" href="#educ">Education</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Skills</a>
+        <a class="nav-link" href="#particles-js">Skills</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Projects</a>
@@ -65,7 +65,7 @@
 
 <!----------------- Header (Home) Begins Here --------------->
 
-<section class="header">
+<section class="header" id="home">
     <div class="header-center-part">
       <p class="">Hi, I am</p>
       <p class="name">Sattam</p>
@@ -81,13 +81,13 @@
 
 <!----------------About me section begins here---------->
 
-<section class="about-me">
+<section class="about-me" id="about">
     <div class="d-flex flex-wrap flex-row justify-content-around align-items-center w-75 mx-auto">
       <div class="about-me-image my-5"></div>
       <div class="about-me-desc d-flex flex-column mb-2">
         <div class="text-center text-white h1 mb-5 heading-border pb-2">About Me</div>
         <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <div class="about-me-icons d-flex justify-content-center mt-3">
+        <div class="about-me-icons d-flex justify-content-center py-3">
           <a href="https://www.facebook.com/sattam.banerjee"><i class="fab fa-facebook fa-2x text-white px-3"> </i></a>
           <a href="https://www.instagram.com/__bsattam__/"><i class="fab fa-instagram fa-2x text-white px-3"> </i></a>
           <a href="https://www.linkedin.com/in/sattam-bandyopadhyay-8b5b23190/"> <i class="fab fa-linkedin fa-2x text-white px-3"></i> </a>
@@ -102,7 +102,7 @@
 
 <!----------------Education section begins here----------->
 
-<section class="education d-flex">
+<section class="education d-flex" id="educ">
   <span class="edu-heading heading-border text-white h1 px-2 py-2">Education</span>
   <div class="education-content d-flex">
     <div class="education-box align-self-end">
