--- a/index.html
+++ b/index.html
@@ -86,10 +86,16 @@
       <div class="about-me-image my-5"></div>
       <div class="about-me-desc d-flex flex-column mb-2">
         <div class="text-center text-white h1 mb-5 heading-border pb-2">About Me</div>
-        <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p class="text-justify">
+            Hi, I'm Sattam Bandyopadhyay, currently a 3rd year student in Jadavpur University, majoring in Information Technology. I love
+            to work on different web technologies and using different frameworks, to create beautiful and smooth UI/UX. I love front-end 
+            design and development, and currently exploring backend technologies also. I love to learn new things, explore new opportunities, 
+            and solve problems. Also, my hobbies include Photography and Music. 
+
+        </p>
         <div class="about-me-icons d-flex justify-content-center py-3">
           <a href="https://www.facebook.com/sattam.banerjee"><i class="fab fa-facebook fa-2x text-white px-3"> </i></a>
-          <a href="https://www.instagram.com/__bsattam__/"><i class="fab fa-instagram fa-2x text-white px-3"> </i></a>
+          <a href="https://www.instagram.com/_bsattam__photography_/"><i class="fab fa-instagram fa-2x text-white px-3"> </i></a>
           <a href="https://www.linkedin.com/in/sattam-bandyopadhyay-8b5b23190/"> <i class="fab fa-linkedin fa-2x text-white px-3"></i> </a>
         </div>
       </div>
@@ -112,12 +118,12 @@
     </div>
     <div class="education-box align-self-center">
       <span class="edu-inside-box">
-        <p>HS : 92.3%</p> <p>WBCHSE</p> <p>WBJEE rank: 275</p> <p>JEEADV rank: 9600</p>
+        <p>HS : 92.3%</p> <p>WBCHSE</p> <p>WBJEE rank: 275</p> <p>JEEADV rank: 9666</p>
       </span>
     </div>
     <div class="education-box align-self-start">
       <span class="edu-inside-box">
-        <h4>Jadavpur</h4> <h4>University</h4> <p>CGPA: </p>
+        <h4>Jadavpur</h4> <h4>University</h4> <p>CGPA: 9.52</p>
       </span>
     </div>
   </div>
@@ -148,13 +154,13 @@
         </div>
         <div class="skill">
           <span class="h4 font-weight-bold text-white">
-          javascript</span>
+          Javascript</span>
           <div class="skill-range mt-1">
             <div class="skill-len s3"></div>
           </div>
         </div>
         <div class="skill">
-          <span class="h4 font-weight-bold text-white">Python</span>
+          <span class="h4 font-weight-bold text-white">Java</span>
           <div class="skill-range mt-1">
             <div class="skill-len s4"></div>
           </div>
@@ -182,13 +188,98 @@
             <div class="skill-len s7"></div>
           </div>
         </div>
+        <div class="skill">
+          <span class="h4 font-weight-bold text-white">
+          Oracle SQL</span>
+          <div class="skill-range mt-1">
+            <div class="skill-len s8"></div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
 </section>
 <div class="hr"></div>
 
+<!--------------------------------------------------Skills section ends here------------------------------------------------------->
 
+<!--------------------------------------------------Projects section begins here------------------------------------------------------->
+
+
+<section id="projects" class="overlay">
+  <div class="text-center text-white h1 mb-5 pt-3 mx-auto heading-border pb-2 project-heading">Projects</div>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-4">
+        <div class="card">
+          <div class="carousel p-2">
+            <img src="./projects-images/Homepage.png" class="card-img-top" alt="...">
+          </div>
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title">Sorting Algo Visualizer</h5>
+            <p class="card-text text-justify flex-grow-1">
+              This website displays the live working principle of different sorting algorithms by graphically visualising them
+              using HTML canvas. Tech: HTML, CSS, Javascript and Bootstrap.
+            </p>
+            <div class="w-100 d-flex justify-content-around">
+              <a href="https://bsattam.github.io/Sorting-Algorithm-Visualizer" class="btn">Website</a>
+              <a href="https://github.com/bsattam/Sorting-Algorithm-Visualizer" class="btn ">Github</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4">
+        <div class="card">
+          <div class="carousel p-2">
+            <img src="./projects-images/Homepage1.png" class="card-img-top" alt="...">
+          </div>
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title">Covid-19-Tracker</h5>
+            <p class="card-text text-justify flex-grow-1">
+              This website fetches live Covid-19 and vaccination data and displays the total and daily count of Confirmed, 
+              recovered and deaths countrywise, in charts of different timespan for better visualisation. 
+              Tech: HTML, CSS, Javascript, Bootstrap and external API.
+            </p>
+            <div class="w-100 d-flex justify-content-around">
+              <a href="https://bsattam.github.io/Covid-19-Tracker/" class="btn">Website</a>
+              <a href="https://github.com/bsattam/Covid-19-Tracker" class="btn ">Github</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4">
+        <div class="card">
+          <div class="carousel p-2">
+            <img src="./projects-images/Homepage2.jpeg" class="card-img-top" alt="...">
+          </div>
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title">My Portfolio</h5>
+            <p class="card-text text-justify flex-grow-1">
+              My own portfolio website, where I created unique design elements using CSS and Bootstrap, to display 
+              my own details and projects in a beautiful user interface. Tech: HTML, CSS, Bootstrap. Library: particleJS.
+            </p>
+            <div class="w-100 d-flex justify-content-around">
+              <a href="https://bsattam.github.io/Portfolio/" class="btn">Website</a>
+              <a href="https://github.com/bsattam/Portfolio" class="btn ">Github</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  <div>
+</section>
+
+<div class="hr"></div>
+
+<!--------------------------------------------------Projects section ends here------------------------------------------------------->
+
+<!--------------------------------------------------Contact section begins here------------------------------------------------------->
+
+<section>
+
+</section>
+
+<!--------------------------------------------------Contact section ends here-------------------------------------------------------->
 
 
     <script src="script.js"></script>
@@ -198,6 +289,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <script src="particles.js"></script>
-    <script src="app.js"></script>"
+    <script src="app.js"></script>
   </body>
 </html>
