--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <a class="nav-link" href="#particles-js">Skills</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Projects</a>
+        <a class="nav-link" href="#projects">Projects</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Contact</a>
