--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <a class="nav-link" href="#projects">Projects</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Contact</a>
+        <a class="nav-link" href="#contact">Contact</a>
       </li>
     </ul>
   </div>
@@ -81,7 +81,7 @@
 
 <!----------------About me section begins here---------->
 
-<section class="about-me" id="about">
+<section class="about-me pt-5" id="about">
     <div class="d-flex flex-wrap flex-row justify-content-around align-items-center w-75 mx-auto">
       <div class="about-me-image my-5"></div>
       <div class="about-me-desc d-flex flex-column mb-2">
@@ -94,9 +94,10 @@
 
         </p>
         <div class="about-me-icons d-flex justify-content-center py-3">
-          <a href="https://www.facebook.com/sattam.banerjee"><i class="fab fa-facebook fa-2x text-white px-3"> </i></a>
-          <a href="https://www.instagram.com/_bsattam__photography_/"><i class="fab fa-instagram fa-2x text-white px-3"> </i></a>
-          <a href="https://www.linkedin.com/in/sattam-bandyopadhyay-8b5b23190/"> <i class="fab fa-linkedin fa-2x text-white px-3"></i> </a>
+          <a href="https://www.facebook.com/sattam.banerjee" class="px-3"><i class="fab fa-facebook fa-2x text-white"> </i></a>
+          <a href="https://www.instagram.com/_bsattam__photography_/" class="px-3"><i class="fab fa-instagram fa-2x text-white"> </i></a>
+          <a href="https://www.linkedin.com/in/sattam-bandyopadhyay-8b5b23190/" class="px-3"> <i class="fab fa-linkedin fa-2x text-white"></i> </a>
+          <a href="https://github.com/bsattam" class="px-3"> <i class="fab fa-github-square fa-2x text-white"></i> </a>
         </div>
       </div>
     </div>
@@ -206,8 +207,8 @@
 <!--------------------------------------------------Projects section begins here------------------------------------------------------->
 
 
-<section id="projects" class="overlay">
-  <div class="text-center text-white h1 mb-5 pt-3 mx-auto heading-border pb-2 project-heading">Projects</div>
+<section id="projects" class="py-5">
+  <div class="project-heading text-center text-white h1 mb-5 pt-3 mx-auto heading-border pb-2 ">PROJECTS</div>
   <div class="container">
     <div class="row">
       <div class="col-sm-4">
@@ -275,11 +276,37 @@
 
 <!--------------------------------------------------Contact section begins here------------------------------------------------------->
 
-<section>
+<section id="contact">
+  <div class="text-center text-white h1 mb-5 pt-3 mx-auto heading-border pb-2 contact-heading">CONTACT ME</div>
+  <div class="contact-details carousel p-4">
+    <h5 class="">Name: Sattam Bandyopadhyay</h5>
+    <h5 class="pt-4">Mail: bsattam@gmail.com</h5>
+    <h5 class="pt-4">
+        Adress: Boinchigram, Hooghly </br> 
+        West Bengal, India </br>
+        Pin: 712135
+    </h5>
+    <div class="pt-4">
+      <a href="https://www.facebook.com/sattam.banerjee" class="pr-3"><i class="fab fa-facebook fa-2x text-white"> </i></a>
+      <a href="https://www.instagram.com/_bsattam__photography_/" class="px-3"><i class="fab fa-instagram fa-2x text-white"> </i></a>
+      <a href="https://www.linkedin.com/in/sattam-bandyopadhyay-8b5b23190/" class="px-3"> <i class="fab fa-linkedin fa-2x text-white"></i> </a>
+      <a href="https://github.com/bsattam" class="px-3"> <i class="fab fa-github-square fa-2x text-white"></i> </a>
+      <a href="mailto: bsattam@gmail.com" class="pl-3"><i class="fas fa-envelope-square fa-2x text-white"></i> </a>
+    </div>
+  </div>
 
 </section>
+<div class="hr"></div>
 
 <!--------------------------------------------------Contact section ends here-------------------------------------------------------->
+
+
+<!--------------------------------------------------Footer here------------------------------------------------------------------->
+
+<section class="d-flex footer p-1">
+  <h6 class="mx-auto">Created by: Sattam Bandyopadhyay</h6>
+</section>
+
 
 
     <script src="script.js"></script>
