--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
       <div class="col-sm-4">
         <div class="card">
           <div class="carousel p-2">
-            <img src="./projects-images/Homepage1.png" class="card-img-top" alt="...">
+            <img src="./projects-images/Homepage1.jpg" class="card-img-top" alt="...">
           </div>
           <div class="card-body d-flex flex-column">
             <h5 class="card-title">Covid-19-Tracker</h5>
@@ -251,7 +251,7 @@
       <div class="col-sm-4">
         <div class="card">
           <div class="carousel p-2">
-            <img src="./projects-images/Homepage2.jpeg" class="card-img-top" alt="...">
+            <img src="./projects-images/Homepage2.jpg" class="card-img-top" alt="...">
           </div>
           <div class="card-body d-flex flex-column">
             <h5 class="card-title">My Portfolio</h5>
