--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sattam</title>
+    <link rel = "icon" href = "mylogo.png" type = "image/x-icon">
 
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
@@ -75,8 +76,8 @@
         <p class="name">Sattam</p>
         <p class=" pb-3 bottom-border name">Bandyopadhyay</p>
       </div>
-      <div data-aos='fade-up'>
-        <p class="pt-2 h5">Jadavpur University (2019-23)</p>
+      <div class='header-desc' data-aos='fade-up'>
+        <h5 class="pt-2">Jadavpur University (2019-2023)</h5>
         <p class=""> Department of Information Technology</p>
       </div>
     </div>
@@ -154,22 +155,22 @@
 <!---------------------------------------------------Skills Section Begins here------------------------------------------------->
 
 <section class='skills' id='skills'>
-  <div class="project-heading text-center text-white h1 mt-5 mb-5 pt-3 mx-auto heading-border pb-2 "
+  <div class="project-heading text-center text-white h1 mt-5 mb-5 pt-3 mx-auto heading-border pb-2 skills-heading"
   data-aos='fade-in'>SKILLS</div>
   <div class='skills-desc'>
-    <div class='skills-item' data-aos='fade-up' data-aos-delay='200'>
+    <div class='skills-item' data-aos='fade-up' data-aos-delay='200' data-aos-anchor='.skills-heading'>
       <span class='skills-item-left'> Languages: </span> <span class='skills-item-right'> C, C++, Java, Javascript</span>
     </div>
-    <div class='skills-item' data-aos='fade-up' data-aos-delay='400'>
+    <div class='skills-item' data-aos='fade-up' data-aos-delay='400' data-aos-anchor='.skills-heading'>
       <span class='skills-item-left'> Libraries: </span> <span class='skills-item-right'> ReactJS, Bootstrap</span>
     </div>
-    <div class='skills-item' data-aos='fade-up' data-aos-delay='600'>
+    <div class='skills-item' data-aos='fade-up' data-aos-delay='600' data-aos-anchor='.skills-heading'>
       <span class='skills-item-left'> Database: </span> <span class='skills-item-right'> Oracle SQL, Mongo DB</span>
     </div>
-    <div class='skills-item' data-aos='fade-up' data-aos-delay='800'>
+    <div class='skills-item' data-aos='fade-up' data-aos-delay='800' data-aos-anchor='.skills-heading'>
       <span class='skills-item-left'> Backend: </span> <span class='skills-item-right'> NodeJS, Express </span>
     </div>
-    <div class='skills-item' data-aos='fade-up' data-aos-delay='1000'>
+    <div class='skills-item' data-aos='fade-up' data-aos-delay='1000' data-aos-anchor='.skills-heading'>
       <span class='skills-item-left'> Tools: </span> <span class='skills-item-right'> HTML, CSS, VS Code</span>
     </div>
   </div>
