--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <a class="nav-link" href="#educ">Education</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#particles-js">Skills</a>
+        <a class="nav-link" href="#skills">Skills</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#projects">Projects</a>
@@ -69,7 +69,8 @@
 
 <!----------------- Header (Home) Begins Here --------------->
 
-<section class="header" id="home">
+<section class="header home">
+    <div  id="home"> </div>
     <div class="header-center-part">
       <div data-aos='fade-down'>
         <p class="">Hi, I am</p>
@@ -89,7 +90,8 @@
 
 <!----------------About me section begins here---------->
 
-<section class="about-me pt-5" id="about">
+<section class="about-me pt-5">
+    <span id='about'></span>
     <div class="d-flex flex-wrap flex-row justify-content-around align-items-center w-75 mx-auto">
       <div class="about-me-image my-5" data-aos='fade-right' data-aos-delay='450'></div>
       <div class="about-me-desc d-flex flex-column mb-2">
@@ -120,7 +122,8 @@
 
 <!----------------Education section begins here----------->
 
-<section class="education d-flex" id="educ">
+<section class="education d-flex">
+  <span id="educ"></span>
   <span class="edu-heading heading-border text-white h1 px-2 py-2" data-aos='fade-in'>Education</span>
   <div class="education-content d-flex">
     <div class="edu-1">
@@ -154,7 +157,8 @@
 
 <!---------------------------------------------------Skills Section Begins here------------------------------------------------->
 
-<section class='skills' id='skills'>
+<section class='skills'>
+  <span id='skills'></span>
   <div class="project-heading text-center text-white h1 mt-5 mb-5 pt-3 mx-auto heading-border pb-2 skills-heading"
   data-aos='fade-in'>SKILLS</div>
   <div class='skills-desc'>
@@ -185,7 +189,7 @@
 <!--------------------------------------------------Projects section begins here------------------------------------------------------->
 
 
-<section id="projects" class="py-5">
+<section id="projects" class="py-5 projects">
   <div class="project-heading text-center text-white h1 mb-5 pt-3 mx-auto heading-border pb-2 "
   data-aos='fade-in'>PROJECTS</div>
   <div class="container">
@@ -236,7 +240,8 @@
             <h5 class="card-title">My Portfolio</h5>
             <p class="card-text text-justify flex-grow-1">
               My own portfolio website, where I created unique design elements using CSS and Bootstrap, to display 
-              my own details and projects in a beautiful user interface. Tech: HTML, CSS, Bootstrap. Library: particleJS.
+              my own details and projects in a beautiful user interface. Tech: HTML, CSS, Bootstrap. Library: Used AOS (animate-on-scroll)
+              library for animations.
             </p>
             <div class="w-100 d-flex justify-content-around">
               <a href="https://bsattam.github.io/Portfolio/" class="btn">Website</a>
@@ -255,7 +260,8 @@
 
 <!--------------------------------------------------Contact section begins here------------------------------------------------------->
 
-<section id="contact">
+<section class="contact">
+  <span id='contact'></span>
   <div data-aos='fade-in'>
     <div class="text-center text-white h1 mb-5 pt-3 mx-auto heading-border pb-2 contact-heading">CONTACT ME</div>
   </div>
@@ -312,74 +318,3 @@
 </html>
 
 
-
-<!-----------------------------------------------------------------Garbage ---------------------------------------------------->
-
-<!----
-<section id="particles-js">
-  <div class="skills-main d-flex flex-column align-items-center">
-    <div class="bgb px-3 heading-border skill-heading h1
-     text-white text-center pt-4 pb-2 mx-auto">S K I L L S</div>
-    <div class="skills-all d-flex flex-row justify-content-around">
-      <div class="skills-box">
-        <div class="skill">
-          <span class="h4 font-weight-bold text-white">C</span>
-          <div class="skill-range mt-1">
-            <div class="skill-len s1"></div>
-          </div>
-        </div>
-        <div class="skill">
-          <span class="h4 font-weight-bold text-white">C++</span>
-          <div class="skill-range mt-1">
-            <div class="skill-len s2"></div>
-          </div>
-        </div>
-        <div class="skill">
-          <span class="h4 font-weight-bold text-white">
-          Javascript</span>
-          <div class="skill-range mt-1">
-            <div class="skill-len s3"></div>
-          </div>
-        </div>
-        <div class="skill">
-          <span class="h4 font-weight-bold text-white">Java</span>
-          <div class="skill-range mt-1">
-            <div class="skill-len s4"></div>
-          </div>
-        </div>
-      </div>
-      <div class="skills-box">
-        <div class="skill">
-          <span class="h4 font-weight-bold text-white">
-          HTML</span>
-          <div class="skill-range mt-1">
-            <div class="skill-len s5"></div>
-          </div>
-        </div>
-        <div class="skill">
-          <span class="h4 font-weight-bold text-white">
-          CSS</span>
-          <div class="skill-range mt-1">
-            <div class="skill-len s6"></div>
-          </div>
-        </div>
-        <div class="skill">
-          <span class="h4 font-weight-bold text-white">
-          ReactJS</span>
-          <div class="skill-range mt-1">
-            <div class="skill-len s7"></div>
-          </div>
-        </div>
-        <div class="skill">
-          <span class="h4 font-weight-bold text-white">
-          Oracle SQL</span>
-          <div class="skill-range mt-1">
-            <div class="skill-len s8"></div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-<div class="hr"></div>
---->
