--- a/index.html
+++ b/index.html
@@ -200,6 +200,65 @@
             <img src="./projects-images/Homepage.png" class="card-img-top" alt="...">
           </div>
           <div class="card-body d-flex flex-column">
+            <h5 class="card-title">Fund Us</h5>
+            <p class="card-text text-justify flex-grow-1">
+              This is a blockchain website, built using NextJS and Solidity. This website helps user get fund by 
+              crowd-funding for their ventures. Anybody can create donation pot, Contributors can rate the owner of
+              the pot, and can even ban the pot. If one gets three bans on their pots, one will be banned permanently. 
+            </p>
+            <div class="w-100 d-flex justify-content-around">
+              <a href="https://bsattam.github.io/Sorting-Algorithm-Visualizer" class="btn">Website</a>
+              <a href="https://github.com/bsattam/Sorting-Algorithm-Visualizer" class="btn ">Github</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4">
+        <div class="card"  data-aos='fade-up' data-aos-delay='200'>
+          <div class="carousel p-2">
+            <img src="./projects-images/Homepage5.png" class="card-img-top" alt="...">
+          </div>
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title">Peer Programming</h5>
+            <p class="card-text text-justify flex-grow-1">
+              A Full-stack (MERN) collaborative programming website. Features include Authentication of users, 
+              Creating sessions and sharing among peers, Scraping questions from
+              Leetcode or Writing custom question, Coding together in a text editor alongside group video calling. Deployed
+              using Heroku (server) and Netlify (client).
+            </p>
+            <div class="w-100 d-flex justify-content-around">
+              <a href="https://peer-programming.tech/" class="btn">Website</a>
+              <a href="https://github.com/bsattam/peer-programming" class="btn ">Github</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4">
+        <div class="card"  data-aos='fade-up' data-aos-delay='200'>
+          <div class="carousel p-2">
+            <img src="./projects-images/Homepage4.png" class="card-img-top" alt="...">
+          </div>
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title">Travel-The-World Blog</h5>
+            <p class="card-text text-justify flex-grow-1">
+              A Full-stack (MERN) Blog-site project. Features: Login and Sign up functionalities, publishing new blogs, 
+              uploading pictures (for blogs or user proles), sorting blogs based on Categories or Author-names.
+            </p>
+            <div class="w-100 d-flex justify-content-around">
+              <a href="https://travel-the-world-app.herokuapp.com/" class="btn">Website</a>
+              <a href="https://github.com/bsattam/travel-the-world-blog" class="btn ">Github</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-4">
+        <div class="card"  data-aos='fade-up' data-aos-delay='200'>
+          <div class="carousel p-2">
+            <img src="./projects-images/Homepage.png" class="card-img-top" alt="...">
+          </div>
+          <div class="card-body d-flex flex-column">
             <h5 class="card-title">Sorting Algo Visualizer</h5>
             <p class="card-text text-justify flex-grow-1">
               This website displays the live working principle of different sorting algorithms by graphically visualising them
@@ -227,25 +286,6 @@
             <div class="w-100 d-flex justify-content-around">
               <a href="https://bsattam.github.io/Covid-19-Tracker/" class="btn">Website</a>
               <a href="https://github.com/bsattam/Covid-19-Tracker" class="btn ">Github</a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-4">
-        <div class="card"  data-aos='fade-up' data-aos-delay='800'>
-          <div class="carousel p-2">
-            <img src="./projects-images/Homepage2.jpg" class="card-img-top" alt="...">
-          </div>
-          <div class="card-body d-flex flex-column">
-            <h5 class="card-title">My Portfolio</h5>
-            <p class="card-text text-justify flex-grow-1">
-              My own portfolio website, where I created unique design elements using CSS and Bootstrap, to display 
-              my own details and projects in a beautiful user interface. Tech: HTML, CSS, Bootstrap. Library: Used AOS (animate-on-scroll)
-              library for animations.
-            </p>
-            <div class="w-100 d-flex justify-content-around">
-              <a href="https://bsattam.github.io/Portfolio/" class="btn">Website</a>
-              <a href="https://github.com/bsattam/Portfolio" class="btn ">Github</a>
             </div>
           </div>
         </div>
