--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
       <div class="col-sm-4">
         <div class="card"  data-aos='fade-up' data-aos-delay='200'>
           <div class="carousel p-2">
-            <img src="./projects-images/Homepage5.png" class="card-img-top" alt="...">
+            <img src="./projects-images/Homepage5.jpg" class="card-img-top" alt="...">
           </div>
           <div class="card-body d-flex flex-column">
             <h5 class="card-title">Peer Programming</h5>
@@ -236,7 +236,7 @@
       <div class="col-sm-4">
         <div class="card"  data-aos='fade-up' data-aos-delay='200'>
           <div class="carousel p-2">
-            <img src="./projects-images/Homepage4.png" class="card-img-top" alt="...">
+            <img src="./projects-images/Homepage4.jpg" class="card-img-top" alt="...">
           </div>
           <div class="card-body d-flex flex-column">
             <h5 class="card-title">Travel-The-World Blog</h5>
